# socmed_poster

./: .env.example  .gitignore  README.md  README_updated.md  STATUS.md  app.py  diagnose.py  fb_payload_response.md  fb_script.py  instagram_script.py  post_script.py  pyproject.toml  requirements.txt  setup.cfg  standalone_script.py  twitter_script.py
routes/: __init__.py  api.py  main.py  utils.py
scripts/: fb_script.py  linkedin_script.py  twitter_script.py
socmed_poster/: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PACKAGE_README.md  README.md  STATUS.md  __init__.py  __main__.py  diagnose.py  install.py  requirements.txt  web.py
socmed_poster/routes/: __init__.py  api.py  main.py  utils.py
socmed_poster/scripts/: fb_script.py  instagram_script.py  linkedin_script.py
socmed_poster/static/js/: app.js
socmed_poster/templates/: _platform_tabs.html  index.html
socmed_poster/tests/: __init__.py  test_basic.py
static/js/: app.js
templates/: _flash.html  _platform_tabs.html  index.html
